pkp/pkp-lib#2965 Add user filtering by submission stage.
- Supports assignedToSubmissionStage /users API param.
- Adds /submission/{submissionId}/participants endpoints.
