# api/v1/submissions/SubmissionHandler.inc.php
@@ -42,6 +42,16 @@ class SubmissionHandler extends APIHandler {
 					'handler' => array($this, 'getGalleys'),
 					'roles' => $roles
 				),
+				array(
+					'pattern' => $this->getEndpointPattern() . '/{submissionId}/participants',
+					'handler' => array($this, 'getParticipants'),
+					'roles' => array(ROLE_ID_MANAGER, ROLE_ID_SUB_EDITOR),
+				),
+				array(
+					'pattern' => $this->getEndpointPattern() . '/{submissionId}/participants/{stageId}',
+					'handler' => array($this, 'getParticipants'),
+					'roles' => array(ROLE_ID_MANAGER, ROLE_ID_SUB_EDITOR),
+				),
 			),
 		);
 		parent::__construct();
@@ -58,7 +68,7 @@ class SubmissionHandler extends APIHandler {
 			$routeName = $route->getName();
 		}
 
-		if ($routeName === 'getSubmission' || $routeName === 'getGalleys') {
+		if ($routeName === 'getSubmission' || $routeName === 'getGalleys' || $routeName === 'getParticipants') {
 			import('lib.pkp.classes.security.authorization.SubmissionAccessPolicy');
 			$this->addPolicy(new SubmissionAccessPolicy($request, $args, $roleAssignments));
 		}
@@ -180,6 +190,49 @@ class SubmissionHandler extends APIHandler {
 			);
 			foreach ($galleys as $galley) {
 				$data[] = $galleyService->getFullProperties($galley, $args);
+			}
+		}
+
+		return $response->withJson($data, 200);
+	}
+
+	/**
+	 * Get the participants assigned to a submission
+	 *
+	 * This does not return reviewers.
+	 *
+	 * @param $slimRequest Request Slim request object
+	 * @param $response Response object
+	 * @param array $args arguments
+	 *
+	 * @return Response
+	 */
+	public function getParticipants($slimRequest, $response, $args) {
+		$request = $this->getRequest();
+		$context = $request->getContext();
+		$submission = $this->getAuthorizedContextObject(ASSOC_TYPE_SUBMISSION);
+		$stageId = isset($args['stageId']) ? $args['stageId'] : null;
+
+		if (!$submission) {
+			return $response->withStatus(404)->withJsonError('api.submissions.404.resourceNotFound');
+		}
+
+		$data = array();
+
+		$userService = ServicesContainer::instance()->get('user');
+
+		$users = $userService->getUsers($context->getId(), array(
+			'count' => 100, // high upper-limit
+			'assignedToSubmission' => $submission->getId(),
+			'assignedToSubmissionStage' => $stageId,
+		));
+		if (!empty($users)) {
+			$args = array(
+				'request' => $request,
+				'slimRequest' => $slimRequest,
+			);
+			foreach ($users as $user) {
+				$data[] = $userService->getSummaryProperties($user, $args);
 			}
 		}
 
